WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208156
REGRESSION (
r257189
): Catalina-Release-WK2-Perf tests failing due to unexpected output related to WebOverlayLayer
https://bugs.webkit.org/show_bug.cgi?id=208156
Summary
REGRESSION (r257189): Catalina-Release-WK2-Perf tests failing due to unexpect...
Ryan Haddad
Reported
2020-02-24 13:54:59 PST
Catalina Release WK2 Perf tests are failing after
https://trac.webkit.org/changeset/257189/webkit
, seemingly because of this unexpected output that is present in every test: objc[87375]: Class WebOverlayLayer is implemented in both /Volumes/Data/slave/catalina-release-perf-tests/build/WebKitBuild/Release/WebCore.framework/Versions/A/WebCore (0x10a6e0368) and /Volumes/Data/slave/catalina-release-perf-tests/build/WebKitBuild/Release/WebKitLegacy.framework/Versions/A/WebKitLegacy (0x1079ad1d8). One of the two will be used. Which one is undefined.
https://build.webkit.org/builders/Apple-Catalina-Release-WK2-Perf/builds/305
Attachments
Patch
(4.58 KB, patch)
2020-02-24 17:18 PST
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-24 13:55:34 PST
<
rdar://problem/59739250
>
Radar WebKit Bug Importer
Comment 2
2020-02-24 13:55:56 PST
<
rdar://problem/59739262
>
Simon Fraser (smfr)
Comment 3
2020-02-24 17:17:36 PST
***
Bug 208170
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 4
2020-02-24 17:18:33 PST
Created
attachment 391614
[details]
Patch
Simon Fraser (smfr)
Comment 5
2020-02-24 17:39:10 PST
https://trac.webkit.org/changeset/257290/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug