Rename the clashing WebOverlayLayer classes https://bugs.webkit.org/show_bug.cgi?id=208156 rdar://problem/59739250

Reviewed by Tim Horton.

The name WebOverlayLayer was used in two places. Rename them both to more specific names.

Source/WebCore:

* page/cocoa/ResourceUsageOverlayCocoa.mm:
(-[WebResourceUsageOverlayLayer initWithResourceUsageOverlay:]):
(WebCore::ResourceUsageOverlay::platformInitialize):
(-[WebOverlayLayer initWithResourceUsageOverlay:]): Deleted.
(-[WebOverlayLayer drawInContext:]): Deleted.

Source/WebKitLegacy/mac:

* WebView/WebVideoFullscreenController.mm:
(-[WebVideoFullscreenController init]):
(-[WebOverlayLayer layoutSublayers]): Deleted.

Canonical link: https://commits.webkit.org/221111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257290 268f45cc-cd09-0410-ab3c-d52691b4dbfc